fix overflow

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
+body {
+  margin: 0
+}
+
 h1 {
   font-family: "Times New Roman";
   text-align: center;
   width: 90%;
-  margin: 0.5em auto;
+  margin: 1em auto;
   color: #f4f3f1;
   font-size: 2em;
   text-shadow:  2px 2px #e0b83e, 
@@ -82,9 +86,8 @@ h1 {
 .book {
   flex: 1;
   border: 0.5px solid;
-  display: grid;
   margin-bottom: 0.5em;
-  width: 90%
+  width: 90%;
 }
 
 .book:hover {
@@ -152,8 +155,8 @@ h1 {
 
 #spinner {
   box-sizing: border-box;
-  height: 1rem;
-  margin-bottom: -1rem;
+  height: 0.5rem;
+  margin-bottom: -0.5rem;
 }
 
 @keyframes loading {
